Bug 1082745 - Avoid reoptimizing optimized SourceSurfaceCairos, r=bas